fix: remove social menu on mobile + change city

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -167,6 +167,7 @@ a {
     padding: 20px 0px;
     line-height: 1.2em;
     text-align: center;
+    margin-bottom: 100px;
 }
 
 /* Working Area */
@@ -355,6 +356,13 @@ a {
                 }
             }
         }
+    }
+}
+
+@media only screen and (max-width: 920px) {
+    #social_menu {
+        display: none;
+        visibility: hidden;
     }
 }
 
